# lpc-pinix-54628

./: CMakeLists.txt  lpcpinix-54628-uart.patch  nxp_lpc54628_module.patch  nxp_lpc_gpio_bindings.patch  prj.conf
boards/arm/lpcpinix54628/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  lpcpinix54628.dts  lpcpinix54628_defconfig  pinmux.c
soc/arm/nxp_lpc/: Kconfig  Kconfig.defconfig  Kconfig.soc
soc/arm/nxp_lpc/lpc11u6x/: Kconfig.defconfig.series
soc/arm/nxp_lpc/lpc546xx/: Kconfig.defconfig.lpc54628  Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  soc.c  soc.h
src/: clock.c  main.c
